--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             colors: {
               primary: "#F85559",
               secon: "rgba(18, 18, 18, 0.6)",
+              from: "#121212",
+              to: "rgba(18, 18, 18, 0.00) ",
             },
           },
         },
@@ -44,6 +46,7 @@
   </head>
   <body class="font-lato">
     <header class="container mx-auto p-4">
+      <!-- Navigation -->
       <div
         class="lg:px-12 py-6 bg-primary rounded-full navbar bg-base-100 justify-center lg:justify-normal"
       >
@@ -107,6 +110,141 @@
             id=""
             placeholder="Search here"
           /><i class="absolute right-5 top-5 fa-solid fa-magnifying-glass"></i>
+        </div>
+      </div>
+      <!-- Banner Section -->
+      <div class="mt-14">
+        <div class="carousel w-full">
+          <div id="slide1" class="carousel-item relative w-full">
+            <img src="/images/banner1.png" class="w-full" />
+            <div class="absolute bg-black w-full h-full opacity-60"></div>
+            <div
+              class="container absolute w-full h-full hero-content text-center text-neutral-content"
+            >
+              <div class="">
+                <h1 class="mb-2 lg:mb-5 text-xl lg:text-7xl font-extrabold">
+                  Exotic tastes at your <br />
+                  doorstep
+                </h1>
+                <p class="mb-5 text-sm">
+                  We supply highly quality organic products
+                </p>
+                <button class="px-8 py-5 bg-primary rounded-lg font-extrabold">
+                  Shop Now
+                </button>
+              </div>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a
+                href="#slide4"
+                class="btn btn-circle bg-black hover:bg-black border-0 text-white"
+                >❮</a
+              >
+              <a
+                href="#slide2"
+                class="btn btn-circle bg-black hover:bg-black border-0 text-white"
+                >❯</a
+              >
+            </div>
+          </div>
+          <div id="slide2" class="carousel-item relative w-full">
+            <img src="/images/banner2.png" class="w-full" />
+            <div class="absolute bg-black w-full h-full opacity-60"></div>
+            <div
+              class="container absolute w-full h-full hero-content text-center text-neutral-content"
+            >
+              <div class="">
+                <h1 class="mb-2 lg:mb-5 text-xl lg:text-7xl font-extrabold">
+                  Exotic tastes at your <br />
+                  doorstep
+                </h1>
+                <p class="mb-5">We supply highly quality organic products</p>
+                <button class="px-8 py-5 bg-primary rounded-lg font-extrabold">
+                  Shop Now
+                </button>
+              </div>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a
+                href="#slide1"
+                class="btn btn-circle bg-black hover:bg-black border-0 text-white"
+                >❮</a
+              >
+              <a
+                href="#slide3"
+                class="btn btn-circle bg-black hover:bg-black border-0 text-white"
+                >❯</a
+              >
+            </div>
+          </div>
+          <div id="slide3" class="carousel-item relative w-full">
+            <img src="/images/banner3.png" class="w-full" />
+            <div class="absolute bg-black w-full h-full opacity-60"></div>
+            <div
+              class="container absolute w-full h-full hero-content text-center text-neutral-content"
+            >
+              <div class="">
+                <h1 class="mb-2 lg:mb-5 text-xl lg:text-7xl font-extrabold">
+                  Exotic tastes at your <br />
+                  doorstep
+                </h1>
+                <p class="mb-5">We supply highly quality organic products</p>
+                <button class="px-8 py-5 bg-primary rounded-lg font-extrabold">
+                  Shop Now
+                </button>
+              </div>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a
+                href="#slide2"
+                class="btn btn-circle bg-black hover:bg-black border-0 text-white"
+                >❮</a
+              >
+              <a
+                href="#slide4"
+                class="btn btn-circle bg-black hover:bg-black border-0 text-white"
+                >❯</a
+              >
+            </div>
+          </div>
+          <div id="slide4" class="carousel-item relative w-full">
+            <img src="/images/banner4.png" class="w-full" />
+            <div class="absolute bg-black w-full h-full opacity-60"></div>
+            <div
+              class="container absolute w-full h-full hero-content text-center text-neutral-content"
+            >
+              <div class="">
+                <h1 class="mb-2 lg:mb-5 text-xl lg:text-7xl font-extrabold">
+                  Exotic tastes at your <br />
+                  doorstep
+                </h1>
+                <p class="mb-5">We supply highly quality organic products</p>
+                <button class="px-8 py-5 bg-primary rounded-lg font-extrabold">
+                  Shop Now
+                </button>
+              </div>
+            </div>
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a
+                href="#slide3"
+                class="btn btn-circle bg-black hover:bg-black border-0 text-white"
+                >❮</a
+              >
+              <a
+                href="#slide1"
+                class="btn btn-circle bg-black hover:bg-black border-0 text-white"
+                >❯</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </header>
