--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </style>
   </head>
   <body class="font-lato">
-    <header class="container mx-auto p-4">
+    <header class="container mx-auto px-4 lg:px-14 mt-10">
       <!-- Navigation -->
       <div
         class="lg:px-12 py-6 bg-primary rounded-full navbar bg-base-100 justify-center lg:justify-normal"
@@ -112,8 +112,8 @@
         </div>
       </div>
       <!-- Banner Section -->
-      <div class="mt-14">
-        <div class="carousel w-full">
+      <div class="mt-12">
+        <div class="carousel w-full rounded-md">
           <div id="slide1" class="carousel-item relative w-full">
             <img src="/images/banner1.png" class="w-full" />
             <div class="absolute bg-black w-full h-full opacity-60"></div>
@@ -128,7 +128,9 @@
                 <p class="mb-5 text-sm">
                   We supply highly quality organic products
                 </p>
-                <button class="px-8 py-5 bg-primary rounded-lg font-extrabold">
+                <button
+                  class="px-6 py-3 lg:px-8 lg:py-5 bg-primary rounded-lg font-extrabold"
+                >
                   Shop Now
                 </button>
               </div>
@@ -160,7 +162,9 @@
                   doorstep
                 </h1>
                 <p class="mb-5">We supply highly quality organic products</p>
-                <button class="px-8 py-5 bg-primary rounded-lg font-extrabold">
+                <button
+                  class="px-6 py-3 lg:px-8 lg:py-5 bg-primary rounded-lg font-extrabold"
+                >
                   Shop Now
                 </button>
               </div>
@@ -192,7 +196,9 @@
                   doorstep
                 </h1>
                 <p class="mb-5">We supply highly quality organic products</p>
-                <button class="px-8 py-5 bg-primary rounded-lg font-extrabold">
+                <button
+                  class="px-6 py-3 lg:px-8 lg:py-5 bg-primary rounded-lg font-extrabold"
+                >
                   Shop Now
                 </button>
               </div>
@@ -224,7 +230,9 @@
                   doorstep
                 </h1>
                 <p class="mb-5">We supply highly quality organic products</p>
-                <button class="px-8 py-5 bg-primary rounded-lg font-extrabold">
+                <button
+                  class="px-6 py-3 lg:px-8 lg:py-5 bg-primary rounded-lg font-extrabold"
+                >
                   Shop Now
                 </button>
               </div>
@@ -248,8 +256,8 @@
       </div>
     </header>
     <!-- Deal of the Day -->
-    <section class="container mx-auto p-4">
-      <div class="flex justify-between items-center">
+    <section class="container mx-auto px-4 lg:px-14 mt-14">
+      <div class="flex flex-col lg:flex-row justify-between items-center">
         <div class="space-y-4">
           <h3 class="font-extrabold text-5xl">Deal of the day</h3>
           <p class="text-fruit-secondary">
@@ -304,6 +312,279 @@
                 <span style="--value: 08"></span>
               </span>
               Seconds
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 place-items-center mt-12"
+      >
+        <div class="card w-[340px] bg-base-100 shadow-xl border">
+          <figure class="px-10 pt-10">
+            <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center space-y-4">
+            <h2 class="card-title">$12.90 - $18.85</h2>
+            <div class="divider"></div>
+            <p>Apples</p>
+            <div class="card-actions">
+              <div class="rating">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-primary"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-primary"
+                />
+              </div>
+            </div>
+            <a class="font-medium text-xl text-primary" href="#">Details</a>
+          </div>
+        </div>
+        <div class="card w-[340px] bg-base-100 shadow-xl border">
+          <figure class="px-10 pt-10">
+            <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center space-y-4">
+            <h2 class="card-title">$12.90 - $18.85</h2>
+            <div class="divider"></div>
+            <p>Apples</p>
+            <div class="card-actions">
+              <div class="rating">
+                <input
+                  type="radio"
+                  name="rating-3"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-3"
+                  class="mask mask-star-2 bg-primary"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-3"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-3"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-3"
+                  class="mask mask-star-2 bg-primary"
+                />
+              </div>
+            </div>
+            <a class="font-medium text-xl text-primary" href="#">Details</a>
+          </div>
+        </div>
+        <div class="card w-[340px] bg-base-100 shadow-xl border">
+          <figure class="px-10 pt-10">
+            <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center space-y-4">
+            <h2 class="card-title">$12.90 - $18.85</h2>
+            <div class="divider"></div>
+            <p>Apples</p>
+            <div class="card-actions">
+              <div class="rating">
+                <input
+                  type="radio"
+                  name="rating-4"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-4"
+                  class="mask mask-star-2 bg-primary"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-4"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-4"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-4"
+                  class="mask mask-star-2 bg-primary"
+                />
+              </div>
+            </div>
+            <a class="font-medium text-xl text-primary" href="#">Details</a>
+          </div>
+        </div>
+        <div class="card w-[340px] bg-base-100 shadow-xl border">
+          <figure class="px-10 pt-10">
+            <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center space-y-4">
+            <h2 class="card-title">$12.90 - $18.85</h2>
+            <div class="divider"></div>
+            <p>Apples</p>
+            <div class="card-actions">
+              <div class="rating">
+                <input
+                  type="radio"
+                  name="rating-5"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-5"
+                  class="mask mask-star-2 bg-primary"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-5"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-5"
+                  class="mask mask-star-2 bg-primary"
+                />
+                <input
+                  type="radio"
+                  name="rating-5"
+                  class="mask mask-star-2 bg-primary"
+                />
+              </div>
+            </div>
+            <a class="font-medium text-xl text-primary" href="#">Details</a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center mt-14">
+        <button
+          class="px-6 py-3 lg:px-8 lg:py-5 bg-primary rounded-lg font-extrabold text-white"
+        >
+          Shop All
+        </button>
+      </div>
+    </section>
+    <!-- Team Section -->
+    <section class="container mx-auto px-4 lg:px-14 mt-14">
+      <div
+        class="relative hero"
+        style="background-image: url(images/banner1.png)"
+      >
+        <div class="absolute bg-black w-full h-full opacity-60"></div>
+        <div class="hero-content text-center text-neutral-content mt-6">
+          <div>
+            <div>
+              <h1 class="mb-5 text-5xl font-extrabold">Meet the team</h1>
+              <p class="mb-5 lg:px-48">
+                Contrary to popular belief, is not simply random team. We
+                believe in team work, we are making it possible for you.Meet our
+                team who are the industry experts from the fruit field.
+              </p>
+            </div>
+
+            <div
+              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-12"
+            >
+              <div class="flex flex-col justify-center items-center">
+                <img src="./images/member1.png" alt="" />
+                <div class="mt-5">
+                  <h3 class="text-2xl font-bold">Awlad Hossain</h3>
+                  <p>Fruit Expert</p>
+                  <div class="space-x-2 mt-4 text-2xl">
+                    <i
+                      class="fa-brands fa-facebook text-primary rounded-full"
+                    ></i>
+                    <i
+                      class="fa-brands fa-twitter text-primary rounded-full"
+                    ></i>
+                    <i
+                      class="fa-brands fa-linkedin text-primary rounded-full"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col justify-center items-center">
+                <img src="./images/member2.png" alt="" />
+                <div class="mt-5">
+                  <h3 class="text-2xl font-bold">Safia Chowdhury</h3>
+                  <p>Fruit Expert</p>
+                  <div class="space-x-2 mt-4 text-2xl">
+                    <i
+                      class="fa-brands fa-facebook text-primary rounded-full"
+                    ></i>
+                    <i
+                      class="fa-brands fa-twitter text-primary rounded-full"
+                    ></i>
+                    <i
+                      class="fa-brands fa-linkedin text-primary rounded-full"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col justify-center items-center">
+                <img src="./images/member3.png" alt="" />
+                <div class="mt-5">
+                  <h3 class="text-2xl font-bold">Rokib Hossain</h3>
+                  <p>Fruit Expert</p>
+                  <div class="space-x-2 mt-4 text-2xl">
+                    <i
+                      class="fa-brands fa-facebook text-primary rounded-full"
+                    ></i>
+                    <i
+                      class="fa-brands fa-twitter text-primary rounded-full"
+                    ></i>
+                    <i
+                      class="fa-brands fa-linkedin text-primary rounded-full"
+                    ></i>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col justify-center items-center">
+                <img src="./images/member4.png" alt="" />
+                <div class="mt-5">
+                  <h3 class="text-2xl font-bold">Chaity</h3>
+                  <p>Fruit Expert</p>
+                  <div class="space-x-2 mt-4 text-2xl">
+                    <i
+                      class="fa-brands fa-facebook text-primary rounded-full"
+                    ></i>
+                    <i
+                      class="fa-brands fa-twitter text-primary rounded-full"
+                    ></i>
+                    <i
+                      class="fa-brands fa-linkedin text-primary rounded-full"
+                    ></i>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
