Whhy Choose Us - Done

--- a/index.html
+++ b/index.html
@@ -495,11 +495,15 @@
     <!-- Team Section -->
     <section class="container mx-auto px-4 lg:px-14 mt-14">
       <div
-        class="relative hero"
+        class="relative hero rounded-lg"
         style="background-image: url(images/banner1.png)"
       >
-        <div class="absolute bg-black w-full h-full opacity-60"></div>
-        <div class="hero-content text-center text-neutral-content mt-6">
+        <div
+          class="absolute bg-black w-full h-full opacity-60 rounded-lg"
+        ></div>
+        <div
+          class="hero-content text-center text-neutral-content my-28 rounded-lg"
+        >
           <div>
             <div>
               <h1 class="mb-5 text-5xl font-extrabold">Meet the team</h1>
@@ -584,6 +588,130 @@
                     ></i>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Why Choose Section -->
+    <section class="container mx-auto px-4 lg:px-14 mt-14">
+      <div class="text-center space-y-4">
+        <h1 class="text-5xl font-extrabold">Why Choose Us</h1>
+        <p class="text-fruit-secondary font-medium">
+          Contrary to popular belief, is not simply random text. It has roots in
+          a piece of classical <br />
+          Latin literature from 45 BC, making it over 2000 years old.
+        </p>
+      </div>
+
+      <div
+        class="mt-12 grid grid-cols-1 lg:grid-cols-3 place-items-center gap-12"
+      >
+        <!-- Left -->
+        <div class="flex flex-col gap-12">
+          <div class="flex justify-center items-center gap-5">
+            <div class="btn btn-circle">
+              <i class="fa-solid fa-users"></i>
+            </div>
+            <div class="space-y-1">
+              <h2 class="text-fruit-black font-extrabold text-2xl">
+                Dedicated Team
+              </h2>
+              <div class="divider w-3/12"></div>
+              <p class="text-fruit-secondary font-medium">
+                Professional employees are there for you to pick the most
+                amazing and fresh fruits.
+              </p>
+            </div>
+          </div>
+          <div class="flex justify-center items-center gap-5">
+            <div class="btn btn-circle">
+              <i class="fa-solid fa-heart"></i>
+            </div>
+            <div class="space-y-1">
+              <h2 class="text-fruit-black font-extrabold text-2xl">
+                Fresh is Best
+              </h2>
+              <div class="divider w-3/12"></div>
+              <p class="text-fruit-secondary font-medium">
+                Professional employees are there for you to pick the most
+                amazing and fresh fruits.
+              </p>
+            </div>
+          </div>
+          <div class="flex justify-center items-center gap-5">
+            <div class="btn btn-circle">
+              <i class="fa-solid fa-gift"></i>
+            </div>
+            <div class="space-y-1">
+              <h2 class="text-fruit-black font-extrabold text-2xl">
+                Gift Certificates
+              </h2>
+              <div class="divider w-3/12"></div>
+              <p class="text-fruit-secondary font-medium">
+                Professional employees are there for you to pick the most
+                amazing and fresh fruits.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Middle -->
+        <div>
+          <img src="./images/whychoose1.png" alt="" />
+        </div>
+        <!-- Right -->
+        <div class="flex justify-center items-center gap-5">
+          <div class="flex flex-col gap-8">
+            <div class="flex justify-center items-center gap-5">
+              <div class="space-y-1 text-right">
+                <h2 class="text-fruit-black font-extrabold text-2xl">
+                  Integrated Supplier
+                </h2>
+                <div class="flex justify-end">
+                  <div class="divider w-3/12 my-1"></div>
+                </div>
+                <p class="text-fruit-secondary font-medium">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+              <div class="btn btn-circle">
+                <img src="./images/icons/fruit.svg" alt="" />
+              </div>
+            </div>
+            <div class="flex justify-center items-center gap-5">
+              <div class="space-y-1 text-right">
+                <h2 class="text-fruit-black font-extrabold text-2xl">
+                  Sustainable Practice
+                </h2>
+                <div class="flex justify-end items-end">
+                  <div class="divider w-3/12 my-1"></div>
+                </div>
+                <p class="text-fruit-secondary font-medium">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+              <div class="btn btn-circle">
+                <img src="./images/icons/ice-cream.svg" alt="" />
+              </div>
+            </div>
+            <div class="flex justify-center items-center gap-5">
+              <div class="space-y-1 text-right">
+                <h2 class="text-fruit-black font-extrabold text-2xl">
+                  The Benefits Only
+                </h2>
+                <div class="flex justify-end">
+                  <div class="divider w-3/12 my-1"></div>
+                </div>
+                <p class="text-fruit-secondary font-medium">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+              <div class="btn btn-circle">
+                <img src="./images/icons/like.svg" alt="" />
               </div>
             </div>
           </div>
