--- a/index.html
+++ b/index.html
@@ -620,8 +620,8 @@
               </h2>
               <div class="divider w-3/12"></div>
               <p class="text-fruit-secondary font-medium">
-                Professional employees are there for you to pick the most
-                amazing and fresh fruits.
+                Professional employees are there for you to pick <br />
+                the most amazing and fresh fruits.
               </p>
             </div>
           </div>
@@ -635,8 +635,8 @@
               </h2>
               <div class="divider w-3/12"></div>
               <p class="text-fruit-secondary font-medium">
-                Professional employees are there for you to pick the most
-                amazing and fresh fruits.
+                Professional employees are there for you to pick <br />
+                the most amazing and fresh fruits.
               </p>
             </div>
           </div>
@@ -650,8 +650,8 @@
               </h2>
               <div class="divider w-3/12"></div>
               <p class="text-fruit-secondary font-medium">
-                Professional employees are there for you to pick the most
-                amazing and fresh fruits.
+                Professional employees are there for you to pick <br />
+                the most amazing and fresh fruits.
               </p>
             </div>
           </div>
@@ -672,8 +672,8 @@
                   <div class="divider w-3/12 my-1"></div>
                 </div>
                 <p class="text-fruit-secondary font-medium">
-                  Professional employees are there for you to pick the most
-                  amazing and fresh fruits.
+                  Professional employees are there for you to pick <br />
+                  the most amazing and fresh fruits.
                 </p>
               </div>
               <div class="btn btn-circle">
@@ -689,8 +689,8 @@
                   <div class="divider w-3/12 my-1"></div>
                 </div>
                 <p class="text-fruit-secondary font-medium">
-                  Professional employees are there for you to pick the most
-                  amazing and fresh fruits.
+                  Professional employees are there for you to pick <br />
+                  the most amazing and fresh fruits.
                 </p>
               </div>
               <div class="btn btn-circle">
@@ -706,8 +706,8 @@
                   <div class="divider w-3/12 my-1"></div>
                 </div>
                 <p class="text-fruit-secondary font-medium">
-                  Professional employees are there for you to pick the most
-                  amazing and fresh fruits.
+                  Professional employees are there for you to pick <br />
+                  the most amazing and fresh fruits.
                 </p>
               </div>
               <div class="btn btn-circle">
@@ -718,5 +718,35 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer
+      class="bg-fruit-black flex justify-center flex-col items-center mt-14 py-32 px-10 gap-14"
+    >
+      <div class="flex items-center gap-4">
+        <img src="./images/logo.png" alt="" />
+        <a class="normal-case text-4xl font-bold text-white">Fruit Brust</a>
+      </div>
+      <ul
+        class="flex justify-center items-center gap-14 text-white text-lg flex-wrap"
+      >
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">All Fruits</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">My Account</a></li>
+      </ul>
+      <div
+        class="text-3xl text-white flex justify-center items-center gap-10 flex-wrap"
+      >
+        <i class="fa-brands fa-twitter ft"></i>
+        <i class="fa-brands fa-facebook ft"></i>
+        <i class="fa-brands fa-youtube ft"></i>
+        <i class="fa-brands fa-linkedin-in ft"></i>
+        <i class="fa-brands fa-instagram ft"></i>
+        <i class="fa-brands fa-apple ft"></i>
+      </div>
+    </footer>
   </body>
 </html>
