--- a/index.html
+++ b/index.html
@@ -257,9 +257,11 @@
     </header>
     <!-- Deal of the Day -->
     <section class="container mx-auto px-4 lg:px-14 mt-14">
-      <div class="flex flex-col lg:flex-row justify-between items-center">
-        <div class="space-y-4">
-          <h3 class="font-extrabold text-5xl">Deal of the day</h3>
+      <div
+        class="flex flex-col gap-6 lg:flex-row lg:justify-between items-center"
+      >
+        <div class="space-y-4 text-center lg:text-left">
+          <h3 class="font-extrabold text-3xl lg:text-5xl">Deal of the day</h3>
           <p class="text-fruit-secondary">
             Contrary to popular belief, is not simply random text. It has roots
             in a piece of classical <br />
@@ -620,8 +622,8 @@
               </h2>
               <div class="divider w-3/12"></div>
               <p class="text-fruit-secondary font-medium">
-                Professional employees are there for you to pick <br />
-                the most amazing and fresh fruits.
+                Professional employees are there for you to pick the most
+                amazing and fresh fruits.
               </p>
             </div>
           </div>
@@ -635,8 +637,8 @@
               </h2>
               <div class="divider w-3/12"></div>
               <p class="text-fruit-secondary font-medium">
-                Professional employees are there for you to pick <br />
-                the most amazing and fresh fruits.
+                Professional employees are there for you to pick the most
+                amazing and fresh fruits.
               </p>
             </div>
           </div>
@@ -650,8 +652,8 @@
               </h2>
               <div class="divider w-3/12"></div>
               <p class="text-fruit-secondary font-medium">
-                Professional employees are there for you to pick <br />
-                the most amazing and fresh fruits.
+                Professional employees are there for you to pick the most
+                amazing and fresh fruits.
               </p>
             </div>
           </div>
@@ -672,8 +674,8 @@
                   <div class="divider w-3/12 my-1"></div>
                 </div>
                 <p class="text-fruit-secondary font-medium">
-                  Professional employees are there for you to pick <br />
-                  the most amazing and fresh fruits.
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
                 </p>
               </div>
               <div class="btn btn-circle">
@@ -689,8 +691,8 @@
                   <div class="divider w-3/12 my-1"></div>
                 </div>
                 <p class="text-fruit-secondary font-medium">
-                  Professional employees are there for you to pick <br />
-                  the most amazing and fresh fruits.
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
                 </p>
               </div>
               <div class="btn btn-circle">
@@ -706,8 +708,8 @@
                   <div class="divider w-3/12 my-1"></div>
                 </div>
                 <p class="text-fruit-secondary font-medium">
-                  Professional employees are there for you to pick <br />
-                  the most amazing and fresh fruits.
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
                 </p>
               </div>
               <div class="btn btn-circle">
