--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             colors: {
               primary: "#F85559",
               "fruit-secondary": "rgba(18, 18, 18, 0.6)",
+              "fruit-another": "rgba(18, 18, 18, 0.8)",
               "fruit-black": "#121212",
             },
           },
@@ -112,7 +113,7 @@
         </div>
       </div>
       <!-- Banner Section -->
-      <div class="mt-12">
+      <div class="mt-12 relative">
         <div class="carousel w-full rounded-md">
           <div id="slide1" class="carousel-item relative w-full">
             <img src="/images/banner1.png" class="w-full" />
@@ -253,10 +254,36 @@
             </div>
           </div>
         </div>
+        <div
+          class="hidden lg:block absolute bg-white w-4/5 h-56 -bottom-[100px] left-[10%] shadow-2xl rounded-md"
+        >
+          <div class="flex h-full justify-center items-center gap-12">
+            <div class="flex flex-col justify-center items-center">
+              <img src="images/fruit1.png" alt="" />
+              <p class="text-fruit-another font-medium text-xl">Grapes</p>
+            </div>
+            <div class="flex flex-col justify-center items-center">
+              <img src="images/fruit2.png" alt="" />
+              <p class="text-fruit-another font-medium text-xl">Orange</p>
+            </div>
+            <div class="flex flex-col justify-center items-center">
+              <img src="images/fruit3.png" alt="" />
+              <p class="text-fruit-another font-medium text-xl">Mango</p>
+            </div>
+            <div class="flex flex-col justify-center items-center">
+              <img src="images/fruit4.png" alt="" />
+              <p class="text-fruit-another font-medium text-xl">Strawberry</p>
+            </div>
+            <div class="flex flex-col justify-center items-center">
+              <img src="images/fruit5.png" alt="" />
+              <p class="text-fruit-another font-medium text-xl">Pomegranate</p>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <!-- Deal of the Day -->
-    <section class="container mx-auto px-4 lg:px-14 mt-14">
+    <section class="container mx-auto px-4 lg:px-14 mt-14 lg:mt-52">
       <div
         class="flex flex-col gap-6 lg:flex-row lg:justify-between items-center"
       >
