--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
     <title>Fuit Brust | Hasib Muhammad</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -98,7 +98,7 @@
             </ul>
           </div>
           <div class="flex justify-center items-center gap-4">
-            <img class="w-10" src="./images/logo.png" alt="" />
+            <img class="w-10" src="././images/logo.png" alt="" />
             <a class="normal-case text-xl font-bold text-white">Fruit Brust</a>
           </div>
         </div>
@@ -116,7 +116,7 @@
       <div class="mt-12 relative">
         <div class="carousel w-full rounded-md">
           <div id="slide1" class="carousel-item relative w-full">
-            <img src="/images/banner1.png" class="w-full" />
+            <img src="/./images/banner1.png" class="w-full" />
             <div class="absolute bg-black w-full h-full opacity-60"></div>
             <div
               class="container absolute w-full h-full hero-content text-center text-neutral-content"
@@ -152,7 +152,7 @@
             </div>
           </div>
           <div id="slide2" class="carousel-item relative w-full">
-            <img src="/images/banner2.png" class="w-full" />
+            <img src="/./images/banner2.png" class="w-full" />
             <div class="absolute bg-black w-full h-full opacity-60"></div>
             <div
               class="container absolute w-full h-full hero-content text-center text-neutral-content"
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div id="slide3" class="carousel-item relative w-full">
-            <img src="/images/banner3.png" class="w-full" />
+            <img src="/./images/banner3.png" class="w-full" />
             <div class="absolute bg-black w-full h-full opacity-60"></div>
             <div
               class="container absolute w-full h-full hero-content text-center text-neutral-content"
@@ -220,7 +220,7 @@
             </div>
           </div>
           <div id="slide4" class="carousel-item relative w-full">
-            <img src="/images/banner4.png" class="w-full" />
+            <img src="/./images/banner4.png" class="w-full" />
             <div class="absolute bg-black w-full h-full opacity-60"></div>
             <div
               class="container absolute w-full h-full hero-content text-center text-neutral-content"
@@ -259,23 +259,23 @@
         >
           <div class="flex h-full justify-center items-center gap-12">
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit1.png" alt="" />
+              <img src="./images/fruit1.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Grapes</p>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit2.png" alt="" />
+              <img src="./images/fruit2.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Orange</p>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit3.png" alt="" />
+              <img src="./images/fruit3.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Mango</p>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit4.png" alt="" />
+              <img src="./images/fruit4.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Strawberry</p>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit5.png" alt="" />
+              <img src="./images/fruit5.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Pomegranate</p>
             </div>
           </div>
@@ -350,7 +350,7 @@
       >
         <div class="card w-[340px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+            <img src="/./images/fruit6.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
@@ -391,7 +391,7 @@
         </div>
         <div class="card w-[340px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+            <img src="/./images/fruit7.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
@@ -432,7 +432,7 @@
         </div>
         <div class="card w-[340px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+            <img src="/./images/fruit8.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
@@ -473,7 +473,7 @@
         </div>
         <div class="card w-[340px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+            <img src="/./images/fruit9.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
@@ -525,7 +525,7 @@
     <section class="container mx-auto px-4 lg:px-14 mt-14">
       <div
         class="relative hero rounded-lg"
-        style="background-image: url(images/banner1.png)"
+        style="background-image: url(./images/banner1.png)"
       >
         <div
           class="absolute bg-black w-full h-full opacity-60 rounded-lg"
@@ -547,7 +547,7 @@
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-12"
             >
               <div class="flex flex-col justify-center items-center">
-                <img src="./images/member1.png" alt="" />
+                <img src="././images/member1.png" alt="" />
                 <div class="mt-5">
                   <h3 class="text-2xl font-bold">Awlad Hossain</h3>
                   <p>Fruit Expert</p>
@@ -565,7 +565,7 @@
                 </div>
               </div>
               <div class="flex flex-col justify-center items-center">
-                <img src="./images/member2.png" alt="" />
+                <img src="././images/member2.png" alt="" />
                 <div class="mt-5">
                   <h3 class="text-2xl font-bold">Safia Chowdhury</h3>
                   <p>Fruit Expert</p>
@@ -583,7 +583,7 @@
                 </div>
               </div>
               <div class="flex flex-col justify-center items-center">
-                <img src="./images/member3.png" alt="" />
+                <img src="././images/member3.png" alt="" />
                 <div class="mt-5">
                   <h3 class="text-2xl font-bold">Rokib Hossain</h3>
                   <p>Fruit Expert</p>
@@ -601,7 +601,7 @@
                 </div>
               </div>
               <div class="flex flex-col justify-center items-center">
-                <img src="./images/member4.png" alt="" />
+                <img src="././images/member4.png" alt="" />
                 <div class="mt-5">
                   <h3 class="text-2xl font-bold">Chaity</h3>
                   <p>Fruit Expert</p>
@@ -687,7 +687,7 @@
         </div>
         <!-- Middle -->
         <div>
-          <img src="./images/whychoose1.png" alt="" />
+          <img src="././images/whychoose1.png" alt="" />
         </div>
         <!-- Right -->
         <div class="flex justify-center items-center gap-5">
@@ -706,7 +706,7 @@
                 </p>
               </div>
               <div class="btn btn-circle">
-                <img src="./images/icons/fruit.svg" alt="" />
+                <img src="././images/icons/fruit.svg" alt="" />
               </div>
             </div>
             <div class="flex justify-center items-center gap-5">
@@ -723,7 +723,7 @@
                 </p>
               </div>
               <div class="btn btn-circle">
-                <img src="./images/icons/ice-cream.svg" alt="" />
+                <img src="././images/icons/ice-cream.svg" alt="" />
               </div>
             </div>
             <div class="flex justify-center items-center gap-5">
@@ -740,7 +740,7 @@
                 </p>
               </div>
               <div class="btn btn-circle">
-                <img src="./images/icons/like.svg" alt="" />
+                <img src="././images/icons/like.svg" alt="" />
               </div>
             </div>
           </div>
@@ -753,7 +753,7 @@
       class="bg-fruit-black flex justify-center flex-col items-center mt-14 py-32 px-10 gap-14"
     >
       <div class="flex items-center gap-4">
-        <img src="./images/logo.png" alt="" />
+        <img src="././images/logo.png" alt="" />
         <a class="normal-case text-4xl font-bold text-white">Fruit Brust</a>
       </div>
       <ul
