--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="mt-12 relative">
         <div class="carousel w-full rounded-md">
           <div id="slide1" class="carousel-item relative w-full">
-            <img src="/images/banner1.png" class="w-full" />
+            <img src="./images/banner1.png" class="w-full" />
             <div class="absolute bg-black w-full h-full opacity-60"></div>
             <div
               class="container absolute w-full h-full hero-content text-center text-neutral-content"
@@ -152,7 +152,7 @@
             </div>
           </div>
           <div id="slide2" class="carousel-item relative w-full">
-            <img src="/images/banner2.png" class="w-full" />
+            <img src="./images/banner2.png" class="w-full" />
             <div class="absolute bg-black w-full h-full opacity-60"></div>
             <div
               class="container absolute w-full h-full hero-content text-center text-neutral-content"
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div id="slide3" class="carousel-item relative w-full">
-            <img src="/images/banner3.png" class="w-full" />
+            <img src="./images/banner3.png" class="w-full" />
             <div class="absolute bg-black w-full h-full opacity-60"></div>
             <div
               class="container absolute w-full h-full hero-content text-center text-neutral-content"
@@ -220,7 +220,7 @@
             </div>
           </div>
           <div id="slide4" class="carousel-item relative w-full">
-            <img src="/images/banner4.png" class="w-full" />
+            <img src="./images/banner4.png" class="w-full" />
             <div class="absolute bg-black w-full h-full opacity-60"></div>
             <div
               class="container absolute w-full h-full hero-content text-center text-neutral-content"
