--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
           <div class="flex items-center gap-4">
             <div class="flex flex-col">
-              <span class="countdown text-5xl font-extrabold">
+              <span class="countdown text-3xl lg:text-5xl font-extrabold">
                 <span style="--value: 29"></span>
               </span>
               Days
@@ -311,7 +311,7 @@
           </div>
           <div class="flex items-center gap-4">
             <div class="flex flex-col">
-              <span class="countdown text-5xl font-extrabold">
+              <span class="countdown text-3xl lg:text-5xl font-extrabold">
                 <span style="--value: 15"></span>
               </span>
               Hours
@@ -324,7 +324,7 @@
           </div>
           <div class="flex items-center gap-4">
             <div class="flex flex-col">
-              <span class="countdown text-5xl font-extrabold">
+              <span class="countdown text-3xl lg:text-5xl font-extrabold">
                 <span style="--value: 25"></span>
               </span>
               Minutes
@@ -337,7 +337,7 @@
           </div>
           <div class="flex items-center gap-4">
             <div class="flex flex-col">
-              <span class="countdown text-5xl font-extrabold">
+              <span class="countdown text-3xl lg:text-5xl font-extrabold">
                 <span style="--value: 08"></span>
               </span>
               Seconds
