--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
         </div>
       </div>
       <div
-        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 place-items-center mt-12"
+        class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 place-items-center mt-12"
       >
-        <div class="card w-[340px] bg-base-100 shadow-xl border">
+        <div class="card w-[300px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
             <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -389,7 +389,7 @@
             <a class="font-medium text-xl text-primary" href="#">Details</a>
           </div>
         </div>
-        <div class="card w-[340px] bg-base-100 shadow-xl border">
+        <div class="card w-[300px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
             <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -430,7 +430,7 @@
             <a class="font-medium text-xl text-primary" href="#">Details</a>
           </div>
         </div>
-        <div class="card w-[340px] bg-base-100 shadow-xl border">
+        <div class="card w-[300px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
             <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -471,7 +471,7 @@
             <a class="font-medium text-xl text-primary" href="#">Details</a>
           </div>
         </div>
-        <div class="card w-[340px] bg-base-100 shadow-xl border">
+        <div class="card w-[300px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
             <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
           </figure>
