--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         </div>
       </div>
       <div
-        class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 place-items-center mt-12"
+        class="grid grid-cols-1 gap-5 xl:gap-14 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 place-items-center mt-12"
       >
         <div class="card w-[300px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
