--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           </div>
         </div>
         <div
-          class="hidden lg:block absolute bg-white w-4/5 h-56 -bottom-[100px] left-[10%] shadow-2xl rounded-md"
+          class="hidden lg:block absolute bg-white w-4/5 h-56 -bottom-[100px] xl:-bottom-[115px] left-[10%] shadow-2xl rounded-md"
         >
           <div class="flex h-full justify-center items-center gap-12">
             <div class="flex flex-col justify-center items-center">
