--- a/index.html
+++ b/index.html
@@ -355,38 +355,101 @@
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
             <div class="divider"></div>
-            <p>Apples</p>
+            <p>Apple</p>
             <div class="card-actions">
               <div class="rating">
                 <input
                   type="radio"
-                  name="rating-2"
+                  name="rating-1"
                   class="mask mask-star-2 bg-primary"
                 />
                 <input
                   type="radio"
-                  name="rating-2"
+                  name="rating-1"
                   class="mask mask-star-2 bg-primary"
                   checked
                 />
                 <input
                   type="radio"
-                  name="rating-2"
+                  name="rating-1"
                   class="mask mask-star-2 bg-primary"
                 />
                 <input
                   type="radio"
-                  name="rating-2"
+                  name="rating-1"
                   class="mask mask-star-2 bg-primary"
                 />
                 <input
                   type="radio"
-                  name="rating-2"
+                  name="rating-1"
                   class="mask mask-star-2 bg-primary"
                 />
               </div>
             </div>
-            <a class="font-medium text-xl text-primary" href="#">Details</a>
+            <button
+              onclick="apple.showModal()"
+              class="font-medium text-xl text-primary"
+              href="#"
+            >
+              Details
+            </button>
+            <!-- Open the modal using ID.showModal() method -->
+            <dialog id="apple" class="modal modal-bottom sm:modal-middle">
+              <div class="modal-box py-16">
+                <div
+                  class="flex justify-center items-center flex-col space-y-5"
+                >
+                  <img src="./images/fruit6.png" alt="" />
+                  <h3 class="font-bold text-3xl">Apples</h3>
+                  <p class="px-10">
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                  <div class="card-actions">
+                    <div class="rating">
+                      <input
+                        type="radio"
+                        name="rating-2"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-2"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-2"
+                        class="mask mask-star-2 bg-primary"
+                        checked
+                      />
+                      <input
+                        type="radio"
+                        name="rating-2"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-2"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-action justify-center gap-4">
+                  <form method="dialog">
+                    <button
+                      class="btn btn-outline border-primary text-primary mr-4"
+                    >
+                      Close
+                    </button>
+                    <button class="btn hover:bg-primary bg-primary text-white">
+                      Buy Now
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </dialog>
           </div>
         </div>
         <div class="card w-[300px] bg-base-100 shadow-xl border">
@@ -396,7 +459,7 @@
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
             <div class="divider"></div>
-            <p>Apples</p>
+            <p>Orange</p>
             <div class="card-actions">
               <div class="rating">
                 <input
@@ -427,7 +490,71 @@
                 />
               </div>
             </div>
-            <a class="font-medium text-xl text-primary" href="#">Details</a>
+            <!-- Modal -->
+            <button
+              onclick="orange.showModal()"
+              class="font-medium text-xl text-primary"
+              href="#"
+            >
+              Details
+            </button>
+            <!-- Open the modal using ID.showModal() method -->
+            <dialog id="orange" class="modal modal-bottom sm:modal-middle">
+              <div class="modal-box py-16">
+                <div
+                  class="flex justify-center items-center flex-col space-y-5"
+                >
+                  <img src="./images/fruit7.png" alt="" />
+                  <h3 class="font-bold text-3xl">Orange</h3>
+                  <p class="px-10">
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                  <div class="card-actions">
+                    <div class="rating">
+                      <input
+                        type="radio"
+                        name="rating-4"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-4"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-4"
+                        class="mask mask-star-2 bg-primary"
+                        checked
+                      />
+                      <input
+                        type="radio"
+                        name="rating-4"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-4"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-action justify-center gap-4">
+                  <form method="dialog">
+                    <button
+                      class="btn btn-outline border-primary text-primary mr-4"
+                    >
+                      Close
+                    </button>
+                    <button class="btn hover:bg-primary bg-primary text-white">
+                      Buy Now
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </dialog>
           </div>
         </div>
         <div class="card w-[300px] bg-base-100 shadow-xl border">
@@ -437,38 +564,101 @@
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
             <div class="divider"></div>
-            <p>Apples</p>
+            <p>Red Dragon</p>
             <div class="card-actions">
               <div class="rating">
                 <input
                   type="radio"
-                  name="rating-4"
+                  name="rating-5"
                   class="mask mask-star-2 bg-primary"
                 />
                 <input
                   type="radio"
-                  name="rating-4"
+                  name="rating-5"
                   class="mask mask-star-2 bg-primary"
                   checked
                 />
                 <input
                   type="radio"
-                  name="rating-4"
+                  name="rating-5"
                   class="mask mask-star-2 bg-primary"
                 />
                 <input
                   type="radio"
-                  name="rating-4"
+                  name="rating-5"
                   class="mask mask-star-2 bg-primary"
                 />
                 <input
                   type="radio"
-                  name="rating-4"
+                  name="rating-5"
                   class="mask mask-star-2 bg-primary"
                 />
               </div>
             </div>
-            <a class="font-medium text-xl text-primary" href="#">Details</a>
+            <button
+              onclick="dragon.showModal()"
+              class="font-medium text-xl text-primary"
+              href="#"
+            >
+              Details
+            </button>
+            <!-- Open the modal using ID.showModal() method -->
+            <dialog id="dragon" class="modal modal-bottom sm:modal-middle">
+              <div class="modal-box py-16">
+                <div
+                  class="flex justify-center items-center flex-col space-y-5"
+                >
+                  <img src="./images/fruit8.png" alt="" />
+                  <h3 class="font-bold text-3xl">Red Dragon</h3>
+                  <p class="px-10">
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                  <div class="card-actions">
+                    <div class="rating">
+                      <input
+                        type="radio"
+                        name="rating-6"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-6"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-6"
+                        class="mask mask-star-2 bg-primary"
+                        checked
+                      />
+                      <input
+                        type="radio"
+                        name="rating-6"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-6"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-action justify-center gap-4">
+                  <form method="dialog">
+                    <button
+                      class="btn btn-outline border-primary text-primary mr-4"
+                    >
+                      Close
+                    </button>
+                    <button class="btn hover:bg-primary bg-primary text-white">
+                      Buy Now
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </dialog>
           </div>
         </div>
         <div class="card w-[300px] bg-base-100 shadow-xl border">
@@ -478,38 +668,101 @@
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
             <div class="divider"></div>
-            <p>Apples</p>
+            <p>Banana</p>
             <div class="card-actions">
               <div class="rating">
                 <input
                   type="radio"
-                  name="rating-5"
+                  name="rating-7"
                   class="mask mask-star-2 bg-primary"
                 />
                 <input
                   type="radio"
-                  name="rating-5"
+                  name="rating-7"
                   class="mask mask-star-2 bg-primary"
                   checked
                 />
                 <input
                   type="radio"
-                  name="rating-5"
+                  name="rating-7"
                   class="mask mask-star-2 bg-primary"
                 />
                 <input
                   type="radio"
-                  name="rating-5"
+                  name="rating-7"
                   class="mask mask-star-2 bg-primary"
                 />
                 <input
                   type="radio"
-                  name="rating-5"
+                  name="rating-7"
                   class="mask mask-star-2 bg-primary"
                 />
               </div>
             </div>
-            <a class="font-medium text-xl text-primary" href="#">Details</a>
+            <button
+              onclick="banana.showModal()"
+              class="font-medium text-xl text-primary"
+              href="#"
+            >
+              Details
+            </button>
+            <!-- Open the modal using ID.showModal() method -->
+            <dialog id="banana" class="modal modal-bottom sm:modal-middle">
+              <div class="modal-box py-16">
+                <div
+                  class="flex justify-center items-center flex-col space-y-5"
+                >
+                  <img src="./images/fruit9.png" alt="" />
+                  <h3 class="font-bold text-3xl">Banana</h3>
+                  <p class="px-10">
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                  <div class="card-actions">
+                    <div class="rating">
+                      <input
+                        type="radio"
+                        name="rating-8"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-8"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-8"
+                        class="mask mask-star-2 bg-primary"
+                        checked
+                      />
+                      <input
+                        type="radio"
+                        name="rating-8"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                      <input
+                        type="radio"
+                        name="rating-8"
+                        class="mask mask-star-2 bg-primary"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-action justify-center gap-4">
+                  <form method="dialog">
+                    <button
+                      class="btn btn-outline border-primary text-primary mr-4"
+                    >
+                      Close
+                    </button>
+                    <button class="btn hover:bg-primary bg-primary text-white">
+                      Buy Now
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </dialog>
           </div>
         </div>
       </div>
